@@ -9,6 +9,7 @@ MCDawn 1.0.1.4
 -New Commands
 	-/hallowguns - Toggle gun use on your home map.
 -Updated minecraft.net server list heartbeat url from http://www.minecraft.net/heartbeat.jsp to https://minecraft.net/heartbeat.jsp.
+-If MySQL is not configured properly the error log will also show now.
 	
 MCDawn 1.0.1.3
 -Color codes are no longer sent to IRC/Global.
